<resources>
    <string name="app_name">My Weather App</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="temperature"> %1$d°</string>
    <string name="feelLike">Feels Like: %1$d°</string>
    <string name="lowTemp">Low: %1$d°</string>
    <string name="highTemp">High: %1$d°</string>
    <string name="humidity">Humidity: %1$d%%</string>
    <string name="pressure">Pressure: %1$d hPa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="notification">Get Notification</string>
    <string name="turn_notification_on">Notification On</string>
    <string name="turn_notification_off">Notification Off</string>
    <string name="notify_location">Location: %1$s</string>
    <string name="notify_currentTemp">Current Temp: %1$d°</string>


</resources>