<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="157dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/st_paul_mn"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="267dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="80sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityName"
        tools:text='72°' />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="132dp"
        android:layout_height="117dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/cityName"
        app:layout_constraintTop_toTopOf="@id/temperature" />

    <TextView
        android:id="@+id/feelLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/feelLike"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/temperature"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/temperature" />

    <TextView
        android:id="@+id/lowTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:text="@string/lowTemp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/feelLike" />

    <TextView
        android:id="@+id/highTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highTemp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/lowTemp"
        app:layout_constraintTop_toBottomOf="@id/lowTemp" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="@id/highTemp"
        app:layout_constraintTop_toBottomOf="@id/highTemp" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="@id/humidity"
        app:layout_constraintTop_toBottomOf="@id/humidity"/>

    <Button
        android:id="@+id/forecastBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:text="Forecast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="76dp"-->
    <!--        android:layout_height="20dp"-->
    <!--        android:text="Low"-->
    <!--        tools:layout_editor_absoluteX="7dp"-->
    <!--        tools:layout_editor_absoluteY="281dp" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="High"-->
    <!--        tools:layout_editor_absoluteX="5dp"-->
    <!--        tools:layout_editor_absoluteY="307dp" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView3"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="TextView"-->
    <!--        tools:layout_editor_absoluteX="7dp"-->
    <!--        tools:layout_editor_absoluteY="334dp" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/textView4"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="TextView"-->
    <!--        tools:layout_editor_absoluteX="7dp"-->
    <!--        tools:layout_editor_absoluteY="357dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
